--- a/SITA2025_高須賀/ref.bib
+++ b/SITA2025_高須賀/ref.bib
@@ -71,6 +71,46 @@
 @book{吉野2002日本の気候,
   title={日本の気候―最新データでメカニズムを考える},
   author={吉野, 正敏},
-  publisher={,二宮書店},
+  publisher={二宮書店},
   year={2002}
+}
+
+@book{kohonen1990self,
+  title={The self-organizing map},
+  author={Kohonen, Teuvo},
+  journal={Proceedings of the IEEE},
+  volume={78},
+  number={9},
+  pages={1464--1480},
+  year={1990},
+  publisher={IEEE}
+}
+
+@article{kohonen1995batch,
+  title={The batch map algorithm for the self-organizing map},
+  author={Kohonen, Teuvo},
+  journal={Neurocomputing},
+  volume={10},
+  number={3},
+  pages={303--313},
+  year={1995},
+  publisher={Elsevier}
+}
+
+@article{kohonen2002self,
+  title={The self-organizing map},
+  author={Kohonen, Teuvo},
+  journal={Proceedings of the IEEE},
+  volume={78},
+  number={9},
+  pages={1464--1480},
+  year={2002},
+  publisher={IEEE}
+}
+
+@misc{vettigliminisom,
+  title={MiniSom: minimalistic and NumPy-based implementation of the Self Organizing Map},
+  author={Giuseppe Vettigli},
+  year={2018},
+  url={https://github.com/JustGlowing/minisom/},
 }
